# OpenADR-VEN-Library

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  Makefile  README.md  README.valgrind  SConstruct  VERSION  gcovr.cfg  sconsHelper.py
.github/workflows/: ci.yml
oadr/: SConscript
oadr/oadr/helper/: Base64.cpp  Base64.h  DateTimeConverter.cpp  DateTimeConverter.h  ISO8601Duration.cpp  ISO8601Duration.h  ISignatureContext.h  OadrPayloadHelpers.cpp  OadrPayloadHelpers.h  OpenSSLHelpers.cpp  OpenSSLHelpers.h  RandomHex.cpp  RandomHex.h  SignatureContext.cpp  SignatureContext.h  Timezone.cpp  Timezone.h  XercescHelpers.h  XmlSecurityHelpers.cpp  XmlSecurityHelpers.h
oadr/oadr/helper/conditionalsleep/: ConditionalSleep.cpp  ConditionalSleep.h  IConditionalSleep.cpp  IConditionalSleep.h
oadr/oadr/helper/globaltime/: GlobalTime.cpp  GlobalTime.h  GlobalTimeStandard.cpp  GlobalTimeStandard.h  IGlobalTime.cpp  IGlobalTime.h
oadr/oadr/helper/thread/: IRun.cpp  IRun.h  ThreadRunner.cpp  ThreadRunner.h
oadr/oadr/manager/: IOADRExceptionService.cpp  IOADRExceptionService.h  IVENManager.cpp  IVENManager.h  VENManager.cpp  VENManager.h  VENManagerConfig.cpp  VENManagerConfig.h
oadr/oadr/manager/eventmanager/: EventManager.cpp  EventManager.h  IEventService.cpp  IEventService.h  ISendCreatedEvent.cpp  ISendCreatedEvent.h
oadr/oadr/manager/reportmanager/: IReportService.cpp  IReportService.h  ISendReport.cpp  ISendReport.h  RegisteredReports.cpp  RegisteredReports.h  ReportManager.cpp  ReportManager.h
oadr/oadr/manager/transport/: ITransport.cpp  ITransport.h
oadr/oadr/request/: CancelPartyRegistration.cpp  CancelPartyRegistration.h  CanceledReport.cpp  CanceledReport.h  CreatePartyRegistration.cpp  CreatePartyRegistration.h  CreatedEvent.cpp  CreatedEvent.h  CreatedReport.cpp  CreatedReport.h  DurationModifier.cpp  DurationModifier.h  EventResponses.cpp  EventResponses.h  Oadr2bHelper.cpp  Oadr2bHelper.h  Oadr2bRequest.cpp  Oadr2bRequest.h  OadrException.cpp  OadrException.h  Poll.cpp  Poll.h  QueryRegistration.cpp  QueryRegistration.h  RequestEvent.cpp  RequestEvent.h
oadr/oadr/request/opt/: CancelOptSchedule.cpp  CancelOptSchedule.h  CreateOpt.cpp  CreateOpt.h  CreateOptEvent.cpp  CreateOptEvent.h  CreateOptSchedule.cpp  CreateOptSchedule.h  OptReasonValue.cpp  OptReasonValue.h  OptSchedule.cpp  OptSchedule.h
oadr/oadr/request/report/: DataQualityTypeValue.cpp  DataQualityTypeValue.h  ReadingTypeEnumeratedTypeValue.cpp  ReadingTypeEnumeratedTypeValue.h  RegisterReport.cpp  RegisterReport.h  ReportName.h  (+13 more)
oadr/oadr/scheduler/: IJob.cpp  IJob.h  IScheduler.cpp  IScheduler.h  JobLambda.cpp  JobLambda.h  Scheduler.cpp  Scheduler.h  SchedulerJob.cpp  SchedulerJob.h  SchedulerJobs.cpp  SchedulerJobs.h
oadr/oadr/ven/: IOadrMessage.cpp  IOadrMessage.h  VEN2b.cpp  VEN2b.h
oadrsd/: SConscript
oadrsd/oadrsd/2b/: AccumulationKind.cxx  AccumulationKind.hxx  AccumulationKind_member.cxx  AccumulationKind_member.hxx  AccuracyType.cxx  AccuracyType.hxx  AggregatedPnodeType.cxx  AggregatedPnodeType.hxx  ArrayOfVavailabilityContainedComponents.cxx  ArrayOfVavailabilityContainedComponents.hxx  ArrayofResponses.cxx  ArrayofResponses.hxx  AuthorizationStatus.cxx  AuthorizationStatus.hxx  AuthorizationStatus_member.cxx  AuthorizationStatus_member.hxx  AvailableType.cxx  AvailableType.hxx  BaseUnitType.cxx  BaseUnitType.hxx  BatchItemInfo.cxx  BatchItemInfo.hxx  CRUDOperation.cxx  CRUDOperation.hxx  CRUDOperation_member.cxx  CRUDOperation_member.hxx  CanonicalizationMethodType.cxx  CanonicalizationMethodType.hxx  CharTwoFieldParamsType.cxx  CharTwoFieldParamsType.hxx  CommodityKind.cxx  CommodityKind.hxx  CommodityKind_member.cxx  CommodityKind_member.hxx  ConfidenceType.cxx  ConfidenceType.hxx  CryptoBinary.cxx  CryptoBinary.hxx  Currency.cxx  Currency.hxx  (+566 more)
oadrsd/oadrsd/schema/: build.sh
oadrtest/: .gitignore  SConscript
oadrtest/oadrtest/: main.cpp
oadrtest/oadrtest/conf/: 000-default.conf
oadrtest/oadrtest/expected_output/: RegisterReport_XMLOutput1.xml  UpdateReport_XMLOutput1.xml  create_opt_schedule1.xml  currency_actual.xml  currency_per_kw_actual.xml  currency_per_kwh.xml  currency_per_kwh_actual.xml  register_report1.xml  request_event1.xml  update_report1.xml  update_report2.xml
oadrtest/oadrtest/helper/: HttpDelegate.cpp  HttpDelegate.h  LoadFile.cpp  LoadFile.h  MockEventService.h  MockGlobalIncrementingTime.cpp  MockGlobalIncrementingTime.h  MockGlobalTime.cpp  MockGlobalTime.h  MockOADRExceptionService.h  MockScheduler.cpp  MockScheduler.h
oadrtest/oadrtest/test_input/: created_party_registration-invalid-ven-name.xml  created_party_registration-with-signature-empty-nonce.xml  created_party_registration-with-signature-no-reference-to-ReplayProtect.xml  created_party_registration-with-signature-no-reference-to-oadrSignedObject.xml  created_party_registration-with-signature-tampered.xml  created_party_registration-with-signature-timestamp-missing.xml  created_party_registration-with-signature-two-oadrSignedObject.xml  created_party_registration-with-signature-wrong-certificate.xml  created_party_registration-with-signature.xml  created_party_registration.xml  currency.xml  currency1.xml  currency_per_kw.xml  currency_per_kw1.xml  currency_per_kwh.xml  request_reregistration.xml  test_buffer1.txt  test_buffer2.txt  test_parser1.xml
oadrtest/oadrtest/tests/: CurlHTTPTest.cpp  CurlReceiveBufferTest.cpp  CurrencyTest.cpp  Oadr2bHelperTest.cpp  ParserTest.cpp  RegisterReportTest.cpp  VEN2bTestSetTest.cpp  VENManagerTest.cpp  XMLOutputTest.cpp
sample/: .gitignore  SConscript
sample/sample/: ISO8601.cpp  ISO8601.h  LogMessage.cpp  LogMessage.h  PrintResponseStatus.h  TimeHelper.cpp  TimeHelper.h  VENImpl.cpp  VENImpl.h  main.cpp
samplevenmanager/samplevenmanager/: VENImpl.cpp  VENImpl.h  main.cpp
schema/2b/: build.sh  oadr_ei_20b.xsd
xsd-4.0.0/: README
xsd-4.0.0/xsd/cxx/: auto-array.hxx  config.hxx  exceptions.hxx  post.hxx  pre.hxx  ro-string.hxx  ro-string.txx  version.hxx  zc-istream.hxx  zc-istream.txx
(+223 files in other folders)
